# BAT_MAN

./: .clang-format  .cproject  .gitignore  .mxproject  .project  BATMAN.cbuild-idx.yml  BATMAN.cbuild-pack.yml  BATMAN.cbuild-set.yml  BATMAN.csolution.yml  BATYY.ioc  Bat_man+Target_1.cbuild.yml  Bat_man.cbuild-idx.yml  Bat_man.cbuild-pack.yml  Bat_man.cbuild-set.yml  Bat_man.cproject.yml  Bat_man.csolution.yml  Bat_man.uvguix.Administrator  Bat_man.uvoptx  Bat_man.uvprojx  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  STM32F103RBTX_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json  sdkconfig  sdkconfig.old  vcpkg-configuration.json
.cache/clangd/index/: Adbms_handler.c.530F21E62453F324.idx  Adbms_handler.c.676FE5DBA5CB1637.idx  Adbms_handler.h.3D0BB8D68B84ACD1.idx  Adbms_handler.h.E78E36CAA6A1DC7F.idx  Albert.c.909A212D36A1BEC3.idx  Albert_handler.h.3CFCC9AC1CAE7F54.idx  Batman_esp.c.6528FD1E7CE32517.idx  Batman_esp.c.79FF41A6BE9846A4.idx  Batman_esp.h.D247340FEE1D2C52.idx  Batman_esp.h.F5C86E5DCE7FDF11.idx  OTA.c.3CD655631FCCE6BA.idx  OTA.c.E71618C036C58791.idx  OTA.h.1297FAFBCCB63DB9.idx  OTA.h.6E815E303CE60C77.idx  Oracle.c.A5DBF3B446037278.idx  Ota_handler.c.5CAAFFAF17AAD701.idx  Robin_TI_handler.h.E625BF66F2734FE8.idx  Robin_balancing.c.512884C770A9F395.idx  Robin_handler.c.C1BA4BFC6959DD2F.idx  Robin_handler.h.764C9EB4B8BE73BF.idx  Robin_handler_TI.c.BFF3ECE1FF81D140.idx  Robin_parser.c.20539395A72C4475.idx  Robin_parser.c.C29F12A71DD30648.idx  Robin_types.h.1AEC570D6DF2E907.idx  WIFI.c.11D02976EC20FD2E.idx  WIFI.c.529FAAFC61169A2C.idx  Wifi.h.C7029E2A44028E86.idx  Wifi.h.D3CC074DA407B887.idx  can_handler.c.55E846F12960FA08.idx  can_handler.c.6241559CE42D70C6.idx  can_handler.h.09CF5E49ED4EC31A.idx  can_handler.h.3D21513C1FD7CC53.idx  diagnostic_handler.c.366E711AF089A532.idx  diagnostic_handler.c.C60B8056AB4344C1.idx  diagnostic_handler.h.D891B78B98D65B9F.idx  diagnostic_handler.h.E9ADA849654C6AC3.idx  isospi_handler.c.2ED566983EA2ADB2.idx  spi_handler.c.2EE9537541808D41.idx  spi_handler.c.A4AB3500F88DAFE4.idx  spi_handler.h.4B39E643015EB84B.idx  (+3 more)
BAT-MAN_CMSIS/: .clangd  BAT-MAN_CMSIS.Debug+STM32F767ZITx.cbuild.yml  BAT-MAN_CMSIS.Release+STM32F767ZITx.cbuild.yml  BAT-MAN_CMSIS.cproject.yml  main.c
BAT-MAN_CMSIS/Inc/: adbms_handler.h  can_handler.h  can_rx.h  can_tx.h  current_handler.h  spi_handler.h  uart_handler.h  usb_handler.h
BAT-MAN_CMSIS/Inc_c/: adbms_handler.c  can_handler.c  can_tx.c  current_handler.c  spi_handler.c  uart_handler.c  usb_handler.c
BAT-MAN_CMSIS/RTE/Device/STM32F767ZITx/: RTE_Device.h  regions_STM32F767ZITx.h
BAT-MAN_CMSIS/RTE/_Debug_STM32F767ZITx/: Pre_Include_Global.h  RTE_Components.h
CAN_DBC/: generate_temperature_dbc.py  generate_voltages_dbc.py  individual_messages_10bit.dbc  individual_temperature_10bit.dbc
EWARM/: BATYY.ewd  BATYY.ewp  Project.eww
GUI/: main.py  server.py
ORACLE/: ORACLE.py  dashboard_callbacks.py  data_service.py  desktop_app.py  layouts.py  main.py  requirements.txt  settings_callbacks.py  trial.py
ORACLE/__pycache__/: main.d.er
ORACLE/env/: pyvenv.cfg
Objects/: Bat_man.axf  Bat_man.build_log.htm  Bat_man.htm  Bat_man.lnp  Bat_man_Target 1.dep
RTE/Device/: project.script
RTE/Device/STM32F767ZITx/: FrameworkCubeMX.gpdsc  MX_Device.h
RTE/Device/STM32F767ZITx/STCubeGenerated/: .mxproject  STCubeGenerated.ioc
RTE/Device/STM32F767ZITx/STCubeGenerated/Inc/: can_handler.h  config.h  stm32f7xx_hal_conf.h
RTE/Device/STM32F767ZITx/STCubeGenerated/MDK-ARM/: STCubeGenerated.uvoptx  STCubeGenerated.uvprojx
RTE/Device/STM32F767ZITx/STCubeGenerated/Src/: can_handler.c  config.c  main.c  mainBAK.c  stm32f7xx_hal_msp.c
RTE/_Target_1/: Pre_Include_Global.h  RTE_Components.h
Simulation/.cache/clangd/index/: hello_world_main.c.C0A0908900948FB1.idx
Simulation/main/: hello_world_main.c
Sources/: adbms6830b.c  adbms6830b.h  debug.c  debug.h  main.c
Src/: main.c  stm32f1xx_hal_msp.c
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
main/: Adbms_handler.c  Batman_esp.c  CMakeLists.txt  OTA.c  WIFI.c  can_handler.c  diagnostic_handler.c  flash_storage.c  isospi_handler.c  partitions.csv  spi_handler.c  uart_handler.c
main/Albert/: Albert.c
main/Flash/: Flash_handler.c  flash_storage.c
main/OTA/: Ota_handler.c
main/Oracle/: Oracle.c
main/Robin/: Robin_balancing.c  Robin_handler.c  Robin_parser.c  Robin_parser_temp.c
main/Robin_TI/: Robin_handler_TI.c
main/Robin_spi/: Robin_handler.c  Robin_parser.c
main/include/: Adbms_handler.h  Albert_handler.h  Batman_esp.h  Flash_handler.h  OTA.h  Robin_TI_handler.h  Robin_handler.h  Robin_types.h  Wifi.h  can_handler.h  diagnostic_handler.h  flash_storage.h  spi_handler.h  uart_handler.h
tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake  compile_commands.json
tmp/BAT-MAN_CMSIS.Debug+STM32F767ZITx/: CMakeLists.txt  components.cmake  groups.cmake
tmp/BAT-MAN_CMSIS.Debug+STM32F767ZITx/src/BAT-MAN_CMSIS.Debug+STM32F767ZITx-stamp/: BAT-MAN_CMSIS.Debug+STM32F767ZITx-configure-.cmake  BAT-MAN_CMSIS.Debug+STM32F767ZITx-configure-Debug.cmake  BAT-MAN_CMSIS.Debug+STM32F767ZITx-source_dirinfo.txt
tmp/BAT-MAN_CMSIS.Debug+STM32F767ZITx/tmp/: BAT-MAN_CMSIS.Debug+STM32F767ZITx-cfgcmd.txt  BAT-MAN_CMSIS.Debug+STM32F767ZITx-mkdirs.cmake
tmp/Bat_man+Target_1/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
tmp/Bat_man+Target_1/src/Bat_man+Target_1-stamp/: Bat_man+Target_1-configure-.cmake  Bat_man+Target_1-configure-Debug.cmake  Bat_man+Target_1-source_dirinfo.txt
tmp/Bat_man+Target_1/tmp/: Bat_man+Target_1-cfgcmd.txt  Bat_man+Target_1-mkdirs.cmake
